<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register_login.fragments.RegisterFragment"
    tools:ignore="ContentDescription">

    <EditText
        android:id="@+id/register_input_phone_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:inputType="phone"
        android:textSize="@dimen/sp_16"
        android:hint="@string/input_phone" />

    <EditText
        android:id="@+id/register_input_vertify_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_120"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/register_input_phone_et"
        android:textSize="@dimen/sp_16"
        android:inputType="number"
        android:maxLength="@integer/integer_6"
        android:hint="@string/input_vetify" />

    <Button
        android:id="@+id/get_phone_vertify_bt"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_48"
        android:text="@string/get_verification"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginEnd="@dimen/dp_120"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_12"
        android:layout_below="@id/register_input_phone_et"
        android:textColor="@color/colorBaseBackground"
        android:background="@color/register_get_vertify"
        android:layout_margin="@dimen/dp_10" />

    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@id/register_input_vertify_et"
        android:inputType="textPassword"
        android:layout_marginRight="@dimen/dp_10"
        android:textSize="@dimen/sp_16"
        android:maxLength="@integer/integer_16"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/input_password" />

    <ImageView
        android:id="@+id/password_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/password_visibility_off"
        android:layout_alignTop="@id/register_password_et"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/dp_10" />

    <TextView
        android:id="@+id/password_length_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/register_password_et"
        android:textSize="@dimen/sp_12"
        android:text="@string/password_length"
        android:textColor="@color/colorSecondaryText" />
    
    <Button
        android:id="@+id/register_bt"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_48"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_16"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@color/colorBaseBackground"
        android:background="@color/register_get_vertify"
        android:layout_below="@id/password_length_tv" />
    
    <TextView
        android:id="@+id/register_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/register_bt"
        android:textSize="@dimen/sp_12"
        android:layout_centerHorizontal="true"
        android:text="@string/register_to_login"
        android:textColor="@color/colorAccent" />
</RelativeLayout>
