<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fragment_home_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold"
                android:text="@string/prompt"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/sp_15"
                android:text="@string/want_to_delete"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/cart_layout_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cart_popup_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorPrimaryText"
            android:gravity="center" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/cart_layout_bg" />

        <TextView
            android:id="@+id/cart_popup_determine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/determine"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorAccent"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>