<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_205"
    android:background="@drawable/nav_header_bg">

    <com.example.axiang.warmstomach.widget.CircleImageView
        android:id="@+id/nav_header_image"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_below="@id/nav_header_image"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorBaseBackground"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/or"
        android:text="@string/register"
        android:layout_below="@id/nav_header_image"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_3"
        android:textColor="@color/register_get_vertify"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/or"
        android:text="@string/login"
        android:layout_below="@id/nav_header_image"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_3"
        android:textColor="@color/register_get_vertify"
        android:textSize="@dimen/sp_18" />
</RelativeLayout>