<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cart_layout_bg"
    tools:context=".ui.settlement.SettlementActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settle_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/dp_4"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:fitsSystemWindows="true"
        app:title="@string/shopping_cart">

        <TextView
            android:id="@+id/settle_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="@dimen/sp_15"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/dp_10" />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/settle_content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/integer_1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/settle_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />
    </FrameLayout>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:text="@string/delete"
        android:textSize="@dimen/sp_18"
        android:layout_gravity="center"
        android:textColor="@color/fragment_home_bg"
        android:background="@color/colorSecondaryText"
        android:clickable="false"
        android:visibility="gone" />
</LinearLayout>
