<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp_10"
    android:layout_marginStart="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_48"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_10"
    android:background="@color/fragment_home_bg"
    tools:ignore="contentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_order_payment_method"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:text="@string/payment_method"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorPrimaryText"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/iv_order_payment_method"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentEnd="true"
                android:src="@drawable/to_choose"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_12"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_order_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/iv_order_payment_method"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorPrimaryText"
                android:layout_centerVertical="true"
                android:text="@string/online_payment"
                android:layout_marginEnd="@dimen/dp_12" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:background="@color/order_layout_dividing_line" />

        <RelativeLayout
            android:id="@+id/rl_order_payment_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:text="@string/note"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorPrimaryText"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/iv_order_note"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentEnd="true"
                android:src="@drawable/to_choose"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_12" />

            <TextView
                android:id="@+id/tv_order_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/iv_order_note"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorSecondaryText"
                android:layout_centerVertical="true"
                android:text="@string/taste_preference_etc"
                android:layout_marginEnd="@dimen/dp_12" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:background="@color/order_layout_dividing_line" />

        <RelativeLayout
            android:id="@+id/rl_order_tableware_quantity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:text="@string/tableware_quantity"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorPrimaryText"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/iv_order_tableware_quantity"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentEnd="true"
                android:src="@drawable/to_choose"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_12" />

            <TextView
                android:id="@+id/tv_order_tableware_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/iv_order_tableware_quantity"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorSecondaryText"
                android:layout_centerVertical="true"
                android:text="@string/not_selected"
                android:layout_marginEnd="@dimen/dp_12" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:background="@color/order_layout_dividing_line" />

        <RelativeLayout
            android:id="@+id/rl_order_invoice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:text="@string/invoice"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorPrimaryText"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/iv_order_invoice"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentEnd="true"
                android:src="@drawable/to_choose"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_12"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_order_invoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/iv_order_invoice"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/colorSecondaryText"
                android:layout_centerVertical="true"
                android:text="@string/no_invoicing"
                android:layout_marginEnd="@dimen/dp_12" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>